--- a/src/templates/actor/npc-sheet.html
+++ b/src/templates/actor/npc-sheet.html
@@ -3,7 +3,9 @@
 	<header class="sheet-header">
 		<img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
 		<div class="header-fields">
-			<h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name" /></h1>
+			<h1 class="charname">
+				<input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'Name' }}" />
+			</h1>
 			{{!-- The grid classes are defined in scss/global/_grid.scss. To use, use both the "grid" and "grid-Ncol"
 			class where "N" can be any number from 1 to 12 and will create that number of columns. --}}
 			<div class="resources grid grid-2col">
@@ -62,9 +64,9 @@
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
 		{{!-- Default tab is specified in actor-sheet.js --}}
-		<a class="item" data-tab="description">Description</a>
 		<a class="item" data-tab="items">Items</a>
-		<a class="item" data-tab="effects">Effects</a>
+		<a class="item" data-tab="description">Description</a>
+		<!-- <a class="item" data-tab="effects">Effects</a> -->
 	</nav>
 
 	{{!-- Sheet Body --}}
