--- a/src/styles/wutc.css
+++ b/src/styles/wutc.css
@@ -382,6 +382,16 @@
 	margin: 0 6px;
 }
 
+.wutc .items-list .item-controls .item-toggle,
+.wutc .items-list .item-controls .item-weight {
+	color: #b5b3a4;
+}
+
+.wutc .items-list .item-controls .item-toggle.active,
+.wutc .items-list .item-controls .item-weight.active {
+	color: #4b4a44;
+}
+
 .wutc .items-list .item {
 	-webkit-box-align: center;
 	-ms-flex-align: center;
@@ -390,7 +400,7 @@
 	border-bottom: 1px solid #c9c7b8;
 }
 
-.wutc .items-list .item:last-child {
+.wutc .items-list .item.item-detail:last-child {
 	border-bottom: none;
 }
 
@@ -442,6 +452,10 @@
 	-ms-flex: 0 0 200px;
 	flex: 0 0 200px;
 	padding: 0 8px;
+}
+
+.wutc .encumbrance-list {
+	flex-basis: 20%;
 }
 
 .wutc .effects .item .effect-source,
