--- a/src/templates/actor/character-sheet.html
+++ b/src/templates/actor/character-sheet.html
@@ -3,12 +3,10 @@
 	<header class="sheet-header">
 		<img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
 		<div class="header-fields">
-			<h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name" /></h1>
-			{{!-- The grid classes are defined in scss/global/_grid.scss. To use, use both the "grid" and "grid-Ncol"
-			class where "N" can be any number from 1 to 12 and will create that number of columns. --}}
+			<h1 class="charname">
+				<input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'Name' }}" />
+			</h1>
 			<div class="resources grid grid-2col">
-				{{!-- "flex-group-center" is also defined in the _grid.scss file and it will add a small amount of
-				padding, a border, and will center all of its child elements content and text. --}}
 				<div class="resource flex-group-center">
 					<label for="system.attributes.hp.value" class="resource-label">Hit Points</label>
 					<div class="resource-content flexrow flex-center flex-between">
@@ -66,9 +64,9 @@
 	<nav class="sheet-tabs tabs" data-group="primary">
 		{{!-- Default tab is specified in actor-sheet.js --}}
 		<a class="item" data-tab="features">Features</a>
-		<a class="item" data-tab="description">Description</a>
 		<a class="item" data-tab="items">Items</a>
 		<a class="item" data-tab="spells">Spells</a>
+		<a class="item" data-tab="description">Description</a>
 		<!-- <a class="item" data-tab="effects">Effects</a> -->
 	</nav>
 
@@ -78,9 +76,6 @@
 		<div class="tab features" data-group="primary" data-tab="features">
 			<section class="grid grid-3col">
 				<aside class="sidebar">
-					{{!-- The grid classes are defined in scss/global/_grid.scss. To use, use both the "grid" and
-					"grid-Ncol" class where "N" can be any number from 1 to 12 and will create that number of columns.
-					--}}
 					<div class="abilities flexcol">
 						<h3>Characteristics</h3>
 						{{#each system.characteristics as |ability key|}}
@@ -110,11 +105,8 @@
 								data-key="{{key}}"
 								>{{localize (concat "WUTC.Saves." key)}}</label
 							>
-							<span
-								class="ability-mod rollable"
-								data-roll="d20+@characteristics.{{key}}.mod"
-								data-label="{{ability.label}}"
-								>{{numberFormat ability.mod decimals=0 sign=true}}</span
+							<span class="ability-mod rollable" data-roll="d20+@characteristics.{{key}}.mod"
+								>{{numberFormat ability.value decimals=0 sign=true}}</span
 							>
 						</div>
 						{{/each}}
@@ -132,7 +124,6 @@
 								for="system.attributes.attack.value"
 								class="resource-label flexlarge align-left"
 								data-roll="d20+@saves.{{key}}.mod"
-								data-label="{{ability.label}}"
 								>{{localize "WUTC.Attributes.attack"}}</label
 							>
 							<span class="ability-mod">{{numberFormat system.attributes.attack.value sign=true}}</span>
