--- a/src/templates/actor/parts/actor-items.html
+++ b/src/templates/actor/parts/actor-items.html
@@ -1,28 +1,57 @@
 <ol class="items-list">
+	{{#each gear as |set|}}
 	<li class="item flexrow items-header">
-		<div class="item-name">Name</div>
-		<div class="item-formula">Roll Formula</div>
+		<div class="item-name">{{set.label}}</div>
+		<div class="item-formula">{{set.attr}}</div>
 		<div class="item-controls">
-			<a class="item-control item-create" title="Create item" data-type="item"
-				><i class="fas fa-plus"></i> Add item</a
-			>
+			<a class="item-control item-create" title="Create item" data-type="{{set.dataset}}"
+				><i class="fas fa-plus"></i
+			></a>
 		</div>
 	</li>
-	{{#each gear as |item id|}}
-	<li class="item flexrow" data-item-id="{{item._id}}">
-		<div class="item-name">
-			<div class="item-image">
-				<a class="rollable" data-roll-type="item"
-					><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"
-				/></a>
+	<ol class="item-list">
+		{{#each set.items as |item id|}}
+		<li class="item item-detail flexrow" data-item-id="{{item._id}}">
+			<div class="item-name">
+				<div class="item-image">
+					<a class="rollable" data-roll-type="item"
+						><img src="{{item.img}}" title="{{item.name}}" width="24" height="24"
+					/></a>
+				</div>
+				<h4>{{item.name}} {{#if (gt item.system.quantity 1)}}({{item.system.quantity}}){{/if}}</h4>
 			</div>
-			<h4>{{item.name}}</h4>
-		</div>
-		<div class="item-formula item-prop">{{item.system.formula}}</div>
-		<div class="item-controls">
-			<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-			<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-		</div>
-	</li>
+			<div class="item-formula item-prop">
+				{{#if (eq item.type "armor")}} {{item.system.armor.value}} {{else}}{{item.system.formula}} {{/if}}
+			</div>
+			<div class="item-controls">
+				{{#if (eq item.type "armor") }}
+				<a
+					class="item-control item-toggle {{#if item.system.equipped}}active{{/if}}"
+					title="{{#if item.system.equipped}}Unequip{{else}}Equip{{/if}}"
+					><i class="fas fa-shield-alt"></i
+				></a>
+				{{/if}}
+				<a
+					class="item-control item-weight {{#unless item.system.ignoreWeight}}active{{/unless}}"
+					title="{{#if item.system.ignoreWeight}}Add{{else}}Ignore{{/if}} Weight"
+					><i class="fas fa-weight-hanging"></i
+				></a>
+				<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+				<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+			</div>
+		</li>
+		{{/each}}
+	</ol>
 	{{/each}}
 </ol>
+
+<div class="flexrow flex-group-center">
+	<div>Encumbrance:</div>
+	<div class="encumbrance-list">
+		{{#times system.attributes.encumbrance.value}}
+		<i class="fas fa-circle"></i>
+		{{/times}} {{#times system.attributes.encumbrance.diff}}
+		<i class="far fa-circle"></i>
+		{{/times}}
+	</div>
+</div>
