--- a/src/templates/item/spell-sheet.html
+++ b/src/templates/item/spell-sheet.html
@@ -1,10 +1,10 @@
-{{!-- This template is a fallback for when items don't have more specific templates. --}} {{!-- Generally, you'll want
-to make more specific templates when possible. --}}
 <form class="{{cssClass}}" autocomplete="off">
 	<header class="sheet-header">
 		<img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
 		<div class="header-fields">
-			<h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name" /></h1>
+			<h1 class="charname">
+				<input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'Name' }}" />
+			</h1>
 		</div>
 	</header>
 
@@ -25,6 +25,10 @@ to make more specific templates when possible. --}}
 		{{!-- Attributes Tab --}}
 		<div class="tab attributes" data-group="primary" data-tab="attributes">
 			{{!-- As you add new fields, add them in here! --}}
+			<!-- <div class="resource">
+				<label class="resource-label">Spell Level</label>
+				<input type="text" name="system.spellLevel" value="{{system.spellLevel}}" data-dtype="Number" />
+			</div> -->
 		</div>
 	</section>
 </form>
