--- a/src/templates/actor/character-sheet.html
+++ b/src/templates/actor/character-sheet.html
@@ -106,7 +106,7 @@
 								>{{localize (concat "WUTC.Saves." key)}}</label
 							>
 							<span class="ability-mod rollable" data-roll="d20+@characteristics.{{key}}.mod"
-								>{{numberFormat ability.value decimals=0 sign=true}}</span
+								>{{ability.value}}</span
 							>
 						</div>
 						{{/each}}
