--- a/src/templates/item/armor-sheet.html
+++ b/src/templates/item/armor-sheet.html
@@ -10,10 +10,10 @@
 					<label class="resource-label">Quantity</label>
 					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
 				</div> -->
-				<!-- <div class="resource">
+				<div class="resource">
 					<label class="resource-label">Weight</label>
 					<input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</header>
