--- a/src/templates/item/weapon-sheet.html
+++ b/src/templates/item/weapon-sheet.html
@@ -10,10 +10,10 @@
 					<label class="resource-label">Roll Formula</label>
 					<input type="text" name="system.formula" value="{{system.formula}}" data-dtype="Number" disabled />
 				</div>
-				<!-- <div class="resource">
+				<div class="resource">
 					<label class="resource-label">Weight</label>
 					<input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</header>
