--- a/src/templates/actor/container-sheet.html
+++ b/src/templates/actor/container-sheet.html
@@ -57,9 +57,9 @@
 			{{> "systems/wutc/templates/actor/parts/actor-items.html"}}
 		</div>
 
-		{{!-- Active Effects Tab --}}
+		<!-- {{!-- Active Effects Tab --}}
 		<div class="tab effects flexcol" data-group="primary" data-tab="effects">
 			{{> "systems/wutc/templates/actor/parts/actor-effects.html"}}
-		</div>
+		</div> -->
 	</section>
 </form>
