--- a/src/templates/actor/ship-sheet.html
+++ b/src/templates/actor/ship-sheet.html
@@ -90,8 +90,8 @@
 		</div>
 
 		{{!-- Active Effects Tab --}}
-		<div class="tab effects flexcol" data-group="primary" data-tab="effects">
+		<!-- <div class="tab effects flexcol" data-group="primary" data-tab="effects">
 			{{> "systems/wutc/templates/actor/parts/actor-effects.html"}}
-		</div>
+		</div> -->
 	</section>
 </form>
