--- a/src/templates/actor/parts/actor-items.html
+++ b/src/templates/actor/parts/actor-items.html
@@ -24,7 +24,7 @@
 				{{#if (eq item.type "armor")}} {{item.system.armor.value}} {{else}}{{item.system.formula}} {{/if}}
 			</div>
 			<div class="item-controls">
-				{{#if (eq item.type "armor") }}
+				{{#if (or (eq item.type "armor") (eq item.type "weapon")) }}
 				<a
 					class="item-control item-toggle {{#if item.system.equipped}}active{{/if}}"
 					title="{{#if item.system.equipped}}Unequip{{else}}Equip{{/if}}"
