Add price and quantity to items

--- a/src/templates/item/template-sheet.html
+++ b/src/templates/item/template-sheet.html
@@ -12,7 +12,7 @@ to make more specific templates when possible. --}}
 
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		<a class="item" data-tab="attributes">Attributes</a>
 	</nav>
 
