--- a/src/templates/actor/character-sheet.html
+++ b/src/templates/actor/character-sheet.html
@@ -49,7 +49,7 @@
 		{{#if spells.length}}
 		<a class="item" data-tab="spells">Spells</a>
 		{{/if}}
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		{{#if (eq actor.type "npc")}}
 		<a class="item" data-tab="notes">Notes</a>
 		{{/if}}
