--- a/src/templates/actor/container-sheet.html
+++ b/src/templates/actor/container-sheet.html
@@ -33,7 +33,7 @@
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
 		{{!-- Default tab is specified in actor-sheet.js --}}
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		<a class="item" data-tab="notes">Notes</a>
 		<a class="item" data-tab="items">Items</a>
 		<!-- <a class="item" data-tab="effects">Effects</a> -->
