--- a/src/templates/actor/npc-sheet.html
+++ b/src/templates/actor/npc-sheet.html
@@ -46,7 +46,7 @@
 	<nav class="sheet-tabs tabs" data-group="primary">
 		{{!-- Default tab is specified in actor-sheet.js --}}
 		<a class="item" data-tab="items">Items</a>
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		<!-- <a class="item" data-tab="effects">Effects</a> -->
 	</nav>
 
