--- a/src/templates/item/armor-sheet.html
+++ b/src/templates/item/armor-sheet.html
@@ -5,14 +5,18 @@
 			<h1 class="charname">
 				<input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'Name' }}" />
 			</h1>
-			<div class="grid grid-2col">
-				<!-- <div class="resource">
-					<label class="resource-label">Quantity</label>
-					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
-				</div> -->
+			<div class="grid grid-3col">
 				<div class="resource">
-					<label class="resource-label">Weight</label>
+					<label class="resource-label">{{localize "WUTC.Quantity"}}</label>
+					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
+				</div>
+				<div class="resource">
+					<label class="resource-label">{{localize "WUTC.Weight"}}</label>
 					<input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
+				</div>
+				<div class="resource">
+					<label class="resource-label">{{localize "WUTC.Price"}}</label>
+					<input type="text" name="system.price" value="{{system.price}}" data-dtype="Number" />
 				</div>
 			</div>
 		</div>
@@ -20,7 +24,7 @@
 
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		<a class="item" data-tab="attributes">Attributes</a>
 	</nav>
 
