--- a/src/templates/item/trait-sheet.html
+++ b/src/templates/item/trait-sheet.html
@@ -5,12 +5,22 @@
 			<h1 class="charname">
 				<input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'Name' }}" />
 			</h1>
+			<div class="grid grid-2col">
+				<div class="resource">
+					<label class="resource-label">{{localize "WUTC.Quantity"}}</label>
+					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
+				</div>
+				<div class="resource">
+					<label class="resource-label">{{localize "WUTC.Price"}}</label>
+					<input type="text" name="system.price" value="{{system.price}}" data-dtype="Number" />
+				</div>
+			</div>
 		</div>
 	</header>
 
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		<!-- <a class="item" data-tab="attributes">Attributes</a> -->
 	</nav>
 
