--- a/src/templates/item/weapon-sheet.html
+++ b/src/templates/item/weapon-sheet.html
@@ -5,14 +5,22 @@
 			<h1 class="charname">
 				<input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'Name' }}" />
 			</h1>
-			<div class="grid grid-2col">
+			<div class="grid grid-4col">
 				<div class="resource">
-					<label class="resource-label">Roll Formula</label>
-					<input type="text" name="system.formula" value="{{system.formula}}" data-dtype="Number" disabled />
+					<label class="resource-label">{{localize "WUTC.RollFormula"}}</label>
+					<input type="text" value="{{system.formula}}" data-dtype="String" disabled />
 				</div>
 				<div class="resource">
-					<label class="resource-label">Weight</label>
+					<label class="resource-label">{{localize "WUTC.Quantity"}}</label>
+					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
+				</div>
+				<div class="resource">
+					<label class="resource-label">{{localize "WUTC.Weight"}}</label>
 					<input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
+				</div>
+				<div class="resource">
+					<label class="resource-label">{{localize "WUTC.Price"}}</label>
+					<input type="text" name="system.price" value="{{system.price}}" data-dtype="Number" />
 				</div>
 			</div>
 		</div>
@@ -20,7 +28,7 @@
 
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
-		<a class="item" data-tab="description">Description</a>
+		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
 		<a class="item" data-tab="attributes">Attributes</a>
 	</nav>
 
@@ -28,15 +36,30 @@
 	<section class="sheet-body">
 		{{!-- Description Tab --}}
 		<div class="tab" data-group="primary" data-tab="description">
-			{{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to
-			the rollData prop. --}} {{editor system.description target="system.description" rollData=rollData
-			button=true owner=owner editable=editable}}
+			{{editor system.description target="system.description" rollData=rollData button=true owner=owner
+			editable=editable}}
 		</div>
 
 		{{!-- Attributes Tab --}}
 		<div class="tab attributes" data-group="primary" data-tab="attributes">
 			<div class="form-group">
-				<label>{{ localize "WUTC.Weight" }}</label>
+				<label>{{ localize "WUTC.FormulaCustomize" }}</label>
+				<input type="checkbox" name="system.customizeFormula" {{checked system.customizeFormula}} />
+			</div>
+			<div class="form-group">
+				<label>{{ localize "WUTC.Formula" }}</label>
+				<input
+					type="text"
+					name="system.formula"
+					value="{{system.formula}}"
+					data-dtype="String"
+					{{disabled
+					(not
+					system.customizeFormula)}}
+				/>
+			</div>
+			<div class="form-group">
+				<label>{{ localize "WUTC.WeightType" }}</label>
 				<select name="system.type">
 					{{selectOptions config.weaponTypes selected=system.type}}
 				</select>
