--- a/src/templates/item/weapon-sheet.html
+++ b/src/templates/item/weapon-sheet.html
@@ -92,8 +92,8 @@
 						name="system.properties.{{key}}"
 						{{checked (lookup ../system.properties key )}}
 					/>
-					{{data.label}}</label
-				>
+					{{data.label}}
+				</label>
 				{{/each}}
 			</div>
 		</div>
