--- a/src/templates/actor/container-sheet.html
+++ b/src/templates/actor/container-sheet.html
@@ -48,8 +48,7 @@
 		</div>
 
 		<div class="tab notes" data-group="primary" data-tab="notes">
-			{{editor system.notes target="system.biography" rollData=rollData button=true owner=owner
-			editable=editable}}
+			{{> "systems/wutc/templates/actor/parts/actor-notes.html"}}
 		</div>
 
 		{{!-- Owned Items Tab --}}
