--- a/src/templates/actor/ship-sheet.html
+++ b/src/templates/actor/ship-sheet.html
@@ -73,6 +73,7 @@
 	<nav class="sheet-tabs tabs" data-group="primary">
 		{{!-- Default tab is specified in actor-sheet.js --}}
 		<a class="item" data-tab="description">Features</a>
+		<a class="item" data-tab="notes">Notes</a>
 		<a class="item" data-tab="items">Items</a>
 		<!-- <a class="item" data-tab="effects">Effects</a> -->
 	</nav>
@@ -97,6 +98,10 @@
 					editable=editable}}
 				</section>
 			</section>
+		</div>
+
+		<div class="tab notes" data-group="primary" data-tab="notes">
+			{{> "systems/wutc/templates/actor/parts/actor-notes.html"}}
 		</div>
 
 		{{!-- Owned Items Tab --}}
