--- a/src/templates/item/template-sheet.html
+++ b/src/templates/item/template-sheet.html
@@ -13,6 +13,7 @@ to make more specific templates when possible. --}}
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
 		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
+		<a class="item" data-tab="notes">Notes</a>
 		<a class="item" data-tab="attributes">Attributes</a>
 	</nav>
 
@@ -21,6 +22,11 @@ to make more specific templates when possible. --}}
 		{{!-- Description Tab --}}
 		<div class="tab" data-group="primary" data-tab="description">
 			{{editor system.description target="system.description" rollData=rollData button=true owner=owner
+			editable=editable}}
+		</div>
+
+		<div class="tab notes" data-group="primary" data-tab="notes">
+			{{editor system.gmNotes target="system.gmNotes" rollData=rollData button=true owner=owner
 			editable=editable}}
 		</div>
 
