Add Items' GM Notes 2

--- a/src/templates/item/equipment-sheet.html
+++ b/src/templates/item/equipment-sheet.html
@@ -25,7 +25,7 @@
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
 		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
-		<a class="item" data-tab="notes">Notes</a>
+		{{#if isGM}}<a class="item" data-tab="notes">GM Notes</a>{{/if}}
 		<a class="item" data-tab="attributes">Attributes</a>
 	</nav>
 
@@ -33,17 +33,16 @@
 	<section class="sheet-body">
 		{{!-- Description Tab --}}
 		<div class="tab" data-group="primary" data-tab="description">
-			{{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to
-			the rollData prop. --}} {{editor system.description target="system.description" rollData=rollData
-			button=true owner=owner editable=editable}}
+			{{editor system.description target="system.description" rollData=rollData button=true owner=owner
+			editable=editable}}
 		</div>
 
+		{{#if isGM}}
 		<div class="tab notes" data-group="primary" data-tab="notes">
 			{{editor system.gmNotes target="system.gmNotes" rollData=rollData button=true owner=owner
 			editable=editable}}
 		</div>
-
-		{{!-- Attributes Tab --}}
+		{{/if}} {{!-- Attributes Tab --}}
 		<div class="tab attributes" data-group="primary" data-tab="attributes">
 			{{!-- As you add new fields, add them in here! --}}
 			<div class="resource">
