--- a/src/templates/item/trait-sheet.html
+++ b/src/templates/item/trait-sheet.html
@@ -21,8 +21,7 @@
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
 		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
-		<a class="item" data-tab="notes">Notes</a>
-		<!-- <a class="item" data-tab="attributes">Attributes</a> -->
+		{{#if isGM}}<a class="item" data-tab="notes">GM Notes</a>{{/if}}
 	</nav>
 
 	{{!-- Sheet Body --}}
@@ -33,14 +32,11 @@
 			editable=editable}}
 		</div>
 
+		{{#if isGM}}
 		<div class="tab notes" data-group="primary" data-tab="notes">
 			{{editor system.gmNotes target="system.gmNotes" rollData=rollData button=true owner=owner
 			editable=editable}}
 		</div>
-
-		{{!-- Attributes Tab --}}
-		<div class="tab attributes" data-group="primary" data-tab="attributes">
-			{{!-- As you add new fields, add them in here! --}}
-		</div>
+		{{/if}}
 	</section>
 </form>
