--- a/src/templates/item/spell-sheet.html
+++ b/src/templates/item/spell-sheet.html
@@ -21,7 +21,7 @@
 	{{!-- Sheet Tab Navigation --}}
 	<nav class="sheet-tabs tabs" data-group="primary">
 		<a class="item" data-tab="description">{{localize "WUTC.Description"}}</a>
-		{{#if isGM}}<a class="item" data-tab="notes">GM Notes</a>{{/if}}
+		<a class="item" data-tab="notes">Notes</a>
 	</nav>
 
 	{{!-- Sheet Body --}}
@@ -32,11 +32,8 @@
 			editable=editable}}
 		</div>
 
-		{{#if isGM}}
 		<div class="tab notes" data-group="primary" data-tab="notes">
-			{{editor system.gmNotes target="system.gmNotes" rollData=rollData button=true owner=owner
-			editable=editable}}
+			{{> "systems/wutc/templates/item/parts/item-notes.html"}}
 		</div>
-		{{/if}}
 	</section>
 </form>
