--- a/src/styles/wutc.css
+++ b/src/styles/wutc.css
@@ -284,6 +284,7 @@
 
 .wutc .sheet-body,
 .wutc .sheet-body .tab,
+.wutc .sheet-body .tab section,
 .wutc .sheet-body .tab .editor {
 	height: 100%;
 }
@@ -488,6 +489,53 @@
 .wutc .abilities button,
 .wutc.card-buttons {
 	margin-top: 5px;
+}
+
+.wutc h3 {
+	border-bottom: none;
+}
+/* ----------------------------------------- */
+/*  Chat Cards                               */
+/* ----------------------------------------- */
+.wutc.chat-card {
+	font-style: normal;
+	font-size: 12px;
+}
+.wutc.chat-card .card-header {
+	padding: 3px 0;
+	border-top: 2px groove #fff;
+	border-bottom: 2px groove #fff;
+}
+.wutc.chat-card .card-header img {
+	flex: 0 0 36px;
+	margin-right: 5px;
+}
+.wutc.chat-card .card-header h3 {
+	flex: 1;
+	margin: 0;
+	line-height: 36px;
+	font-family: "Modesto Condensed", "Palatino Linotype", serif;
+	font-size: 20px;
+	font-weight: 700;
+	color: #4b4a44;
+}
+.wutc.chat-card .card-header h3:hover {
+	color: #111;
+	text-shadow: 0 0 10px red;
+}
+.wutc.chat-card .card-content {
+	margin: 5px 0;
+}
+.wutc.chat-card .card-content h3 {
+	font-size: 12px;
+	margin: 0;
+	font-weight: bold;
+}
+.wutc.chat-card .card-content > * {
+	-webkit-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
 }
 
 .wutc.card-buttons button {
