--- a/src/templates/apps/item-card.hbs
+++ b/src/templates/apps/item-card.hbs
@@ -6,6 +6,6 @@
     </header>
 
     <div class="card-content">
-        {{{data.description.value}}}
+        {{{data.description}}}
     </div>
 </div>
