--- a/src/templates/item/trait-sheet.html
+++ b/src/templates/item/trait-sheet.html
@@ -8,11 +8,11 @@
 			<div class="grid grid-2col">
 				<div class="resource">
 					<label class="resource-label">{{localize "WUTC.Quantity"}}</label>
-					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
+					<input type="number" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
 				</div>
 				<div class="resource">
 					<label class="resource-label">{{localize "WUTC.Price"}}</label>
-					<input type="text" name="system.price" value="{{system.price}}" data-dtype="Number" />
+					<input type="number" name="system.price" value="{{system.price}}" data-dtype="Number" />
 				</div>
 			</div>
 		</div>
