--- a/src/templates/item/weapon-sheet.html
+++ b/src/templates/item/weapon-sheet.html
@@ -12,15 +12,15 @@
 				</div>
 				<div class="resource">
 					<label class="resource-label">{{localize "WUTC.Quantity"}}</label>
-					<input type="text" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
+					<input type="number" name="system.quantity" value="{{system.quantity}}" data-dtype="Number" />
 				</div>
 				<div class="resource">
 					<label class="resource-label">{{localize "WUTC.Weight"}}</label>
-					<input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
+					<input type="number" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
 				</div>
 				<div class="resource">
 					<label class="resource-label">{{localize "WUTC.Price"}}</label>
-					<input type="text" name="system.price" value="{{system.price}}" data-dtype="Number" />
+					<input type="number" name="system.price" value="{{system.price}}" data-dtype="Number" />
 				</div>
 			</div>
 		</div>
