--- a/src/templates/item/armor-sheet.html
+++ b/src/templates/item/armor-sheet.html
@@ -49,7 +49,7 @@
 			{{else}}
 			<div class="form-group">
 				<label>{{ localize "WUTC.ArmorClass"}}</label>
-				<input type="text" name="system.armor.value" value="{{system.armor.value}}" data-dtype="Number" />
+				<input type="number" name="system.armor.value" value="{{system.armor.value}}" data-dtype="Number" />
 			</div>
 			{{/if}}
 			<div class="form-group">
